# json-sinks

./: Cargo.toml
doc/: sinks.txt
src/: main.rs
