[package]
name = "json_sinks"
version = "0.0.1"
authors = ["mio"]
description = "prints »pactl list sinks« in json format."
edition = "2018"
rust-version = "1.60"
exclude = [".github/*", ".vscode/*", "assets/*", ".git"]
license = "MIT"
categories = ["command-line-utilities"]
keywords = [ "json", "pactl" ]

[dependencies]
bacon = "2.2.8"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
